fix(docs): make links readable while hovering in dark theme (#459)

--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -61,6 +61,7 @@
     &:hover,
     &:focus-visible {
       background-color: var(--tz-color-base-lime-800);
+      color: var(--tz-color-base-gray-100);
     }
   }
 
